# base-images

./: .dockerignore  .gitignore  KUKSA_V2_PROVIDER_PATTERN.md  README.md  build-all.sh  build-base-images.sh  build-examples.sh  build-test-framework.sh  docker-bake.hcl  docker-compose.yml  install-dependencies.sh  kuksa_client-0.5.0-py3-none-any.whl  merge-vss-extensions.py  run-1-example-tests-v2.sh  run-1-example-tests-v4.sh  run-1-example-tests-v5.sh  run-all-example-tests-v2.sh  run-example-tests.sh  run-tests-v2.sh  run-tests-v4.sh  run-tests-v5.sh
dockerfiles/runtime/: cpp-alpine-runtime.Dockerfile  cpp-runtime.Dockerfile  python-runtime.Dockerfile
docs/: KUKSA_V2_PROVIDER_ARCHITECTURE.md
examples/: climate_control.cpp
examples/cpp-climate-control/: CMakeLists.txt  Dockerfile.climate  build.sh  climate_control_test_spec.yaml  spec.yaml  vss_extensions.json
examples/cpp-climate-control/src/: climate_control.cpp  climate_control.hpp  main.cpp
examples/cpp-climate-control/tests/: CMakeLists.txt  climate_control_gtest.cpp  functional_test_v1.yaml  integration.yaml  simple_ac_test.yaml  verification_example.yaml
examples/cpp-engine-monitor/: CMakeLists.txt  Dockerfile  Dockerfile.alpine  README.md  engine_monitor.cpp
examples/cpp-engine-monitor/tests/: integration.yaml  stress.yaml
examples/python-speed-monitor/: Dockerfile  requirements.txt  speed_monitor.py
examples/python-speed-monitor/tests/: README.md  integration.yaml  smoke.yaml  unit.yaml
fixture-runner/: CMakeLists.txt  Dockerfile  Dockerfile.python  build-docker.sh
fixture-runner/src/: fixture_runner.cpp
sdk/: IMPLEMENTATION_STATUS.md
sdk/cpp/: CMakeLists.txt  README.md  build.sh
sdk/cpp/examples/: CMakeLists.txt  door_example.cpp  vehicle_example.cpp
sdk/cpp/include/sdv/state_machine/: hierarchical_state_machine.hpp  state_definition.hpp  state_machine.hpp  transition.hpp
sdk/cpp/include/sdv/testing/: gtest_integration.hpp  kuksa_client_wrapper.hpp  test_models.hpp  test_runner.hpp  yaml_parser.hpp
sdk/cpp/include/sdv/vss/: client.hpp  provider.hpp  types.hpp  vss.hpp
sdk/cpp/src/: hierarchical_state_machine.cpp  provider.cpp  state_machine.cpp  vss_client.cpp  vss_client_v1.cpp.bak
sdk/cpp/src/testing/: gtest_integration.cpp  kuksa_client_wrapper.cpp  main.cpp  test_runner.cpp  yaml_parser.cpp
sdk/cpp/tests/: CMakeLists.txt  test_hierarchical.cpp  test_state_machine.cpp  test_testing_framework.cpp  test_transitions.cpp  test_vss_client.cpp  test_vss_integration.cpp
sdk/python/: README.md  setup.py
sdk/python/sdv_state_machine/: __init__.py  core.py  hierarchical.py
test-data/: vss_full.json  vss_release_4.0.json
test-framework/: Dockerfile  README.md  requirements.txt  test_runner.py
test-framework-v4/: Dockerfile  LOGGING_FEATURES.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  requirements.txt  run-tests-v4.sh  run_tests.sh  setup.py
test-framework-v4/examples/: climate_control_spec.yaml  climate_control_test.yaml  run_tests.py
test-framework-v4/kuksa_test/: __init__.py  cli.py  client.py  expression.py  fixture_converter.py  log_formatter.py  models.py  parser.py  reporter.py  runner.py  state_tracker.py
test-framework-v5/: CMakeLists.txt  DESIGN.md  Dockerfile  build.sh
test-framework-v5/src/: main.cpp
